--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@types/node": "^12.20.27",
     "@types/react": "^17.0.26",
     "@types/react-dom": "^17.0.9",
+    "i18next": "^21.2.4",
+    "i18next-browser-languagedetector": "^6.1.2",
     "qrcode": "^1.4.4",
     "qrcode-reader": "^1.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.12.0",
+    "react-qr-reader": "^2.2.1",
     "react-scripts": "4.0.3",
     "typescript": "^4.4.3",
     "web-vitals": "^1.1.2"
@@ -44,5 +48,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/qrcode": "^1.4.1",
+    "@types/react-qr-reader": "^2.1.4"
   }
 }
